[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["macros", "sync", "time", "net", "io-util", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
chrono = "0.4"
