[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["macros", "sync", "time", "net", "io-util", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ed25519-dalek = "2.2"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"# version 0.9 not yet compatible with ed25519-dalek
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
